styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
    overflow-x: hidden;
}

.navbar__container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 80px;
    background: #000;
    z-index: 1000;
    width: 100%;
    margin: 0 auto;
    padding: 0 50px;
    position: fixed;
}

#navbar-logo {
    color: #0ce48d;
    cursor: pointer;
    text-decoration: none;
    font-size: 2rem;
}

.navbar__menu {
    display: flex;
    justify-content: center;
    list-style: none;
    margin: 0 auto;
}

.navbar__item {
    height: 80px;
}

.navbar__links {
    color: #fff;
    text-decoration: none;
    height: 100%;
    padding: 0 1rem;
    display: flex;
    align-items: center;
}

.navbar__links:hover {
    color: #0ce48d;
    transition: all 0.3s ease;
}

.navbar__btn {
    display: flex;
    align-items: center;
}

.navbar__btn.mobile {
    display: none;
}

.navbar__btn.desktop {
    display: flex;
}

.button {
    background: #0ce48d;
    padding: 10px 20px;
    border: none;
    border-radius: 4px;
    color: #fff;
    text-decoration: none;
}

.button:hover {
    background: #15b856;
    transition: all 0.3s ease;
}

.navbar__toggle {
    display: none;
}

@media screen and (max-width: 968px) {
    .navbar__toggle {
        display: block;
        position: absolute;
        right: 20px;
        top: 50%;
        transform: translateY(-50%);
        color: #fff;
        z-index: 10;
        font-size: 1.5rem;
        border: none;
        background: none;
        cursor: pointer;
        padding: 0;
    }

    .navbar__menu {
        flex-direction: column;
        justify-content: flex-start;
        align-items: center;
        position: fixed;
        top: 80px;
        right: -100%;
        width: 100%;
        height: calc(100% - 80px);
        opacity: 0;
        transition: all 0.5s ease;
        background: #131313;
        z-index: 10;
        margin: 0;
    }

    .navbar__menu.active {
        right: 0;
        opacity: 1;
    }

    .navbar__item {
        width: 100%;
        display: flex;
        justify-content: center;
    }
}

